<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="search">Search</string>
    
	<string name="signup">Sign up</string>
	<string name="forget">Forget?</string>
	<string name="signin">Sign in</string>
	<string name="about">Version 1.1.0</string>
	
	<string name="tv_register">Register</string>
	<string name="tv_essentialinformation">Essential Information</string>
	<string name="tv_username">User Name:</string>
	<string name="username">User Name</string>
	<string name="tv_gender">Gender:</string>
	<string name="gender">Gender</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="tv_password">Password:</string>
	<string name="password">Password</string>
	<string name="tv_repeat">Repeat:</string>
	<string name="repeat">Repeat</string>
	<string name="tv_email">E-mail:</string>
	<string name="email">E-mail</string>
	<string name="tv_personalinformation">Personal Information</string>
	<string name="tv_realname">Real Name:</string>
	<string name="realname">Real Name</string>
	<string name="tv_department">department:</string>
	<string name="tv_grade">Grade:</string>
	<string name="tv_studentid">Student ID:</string>
	<string name="studentid">Student ID</string>
	
	<string name="image">image</string>
	<string name="listview">ListView</string>

	
</resources>
