<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn" >

   <EditText
       android:id="@+id/username"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="15dp"
       android:ems="10"
       android:hint="@string/username"
       android:inputType="textPersonName"
       android:textColorHint="@drawable/darkgrey" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@drawable/darkgrey" />

    <Button
        android:id="@+id/signin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/presschangebackground"
        android:text="@string/signin"
        android:textColor="@drawable/white"
        android:textStyle="bold" />

<!--         android:layout_toLeftOf="@+id/signup" -->
<!--         android:layout_marginRight="20dp" -->
    <Button
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginTop="10dp"
		android:layout_alignRight="@+id/signin"
        android:background="@drawable/transparent"
        android:text="@string/forget"
        android:textColor="@drawable/presschangecolor"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/signin"
        android:background="@drawable/transparent"
        android:text="@string/signup"
        android:textColor="@drawable/presschangecolor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/about"
        android:textColor="@drawable/darkgrey" />
    
</RelativeLayout>
